deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: converter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: converter
  template:
    metadata:
      labels:
        app: converter
    spec:
      containers:
        - image: 19055919/monappflask:latest
          imagePullPolicy: IfNotPresent
          name: converter
      restartPolicy: Always
