myservice.yml
apiVersion: v1
kind: Service
metadata:
  name: converter
spec:
  ports:
    - nodePort: 32350
      port: 8080
      protocol: TCP
      targetPort: 5000
  selector:
    app: converter
  type: LoadBalancer
