mygateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: myapp-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
    
    
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - myapp-gateway
  http:
  - match:
    - uri:
        prefix: "/converter"
    route:
    - destination:
        host: converter.default.svc.cluster.local  # Use the full DNS name
        port:
          number: 8080
  - match:
    - uri:
        prefix: "/"  # Catch-all route for other paths
    route:
    - destination:
        host: converter.default.svc.cluster.local  # Use the full DNS name
        port:
          number: 8080
